src/component/select/snapshots/envision__component__select__tests__view_open.snap
---
source: src/component/select/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────┐
│Select... ▲                 │
└────────────────────────────┘
┌────────────────────────────┐
│> Red                       │
│  Green                     │
│  Blue                      │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
